--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -298,10 +298,10 @@ footer .footer_social_media:before {
     background-color: #e7e7e7;
 }
 
-.footer-basic h3{ width:100% ; font-size: 26px; line-height: 40px; color: white; text-align: center;  }
+.footer-basic h3{ width:100% ; font-size: 26px; line-height: 40px; color: white;}
 .footer-basic h4{ width:100% ; color: white; text-align: center;  }
 
-footer .footer_website_nav{ padding: 0 }
+footer .footer_website_nav{}
 
 footer .footer_website_nav nav ul{  padding: 0 0 0 20px;}
 
