--- a/src/GCF/FrontBundle/Resources/views/Default/Projects/projects.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Projects/projects.html.twig
@@ -144,19 +144,19 @@
                     <td><a href="{{ path('gcf_front_projectsinglepage', {'id': project.id} ) }}"> {{ project.nom }}</a></td>
 
                     <td>
-                        {#{% if project.gouvernorat !== null %}#}
-                            {#{% for gouvernorat in project.gouvernorat %}#}
-                                {#{{ gouvernorat.nom }}#}
-                            {#{% endfor %}#}
-                        {#{% endif %}#}
+                        {% for gouvernorat in project.gouvernorat %}
+                            {{ gouvernorat.nom }}
+                        {% endfor %}
                     </td>
 
                     {#organisme---->#}
                     <td>
+                        {% if project.acteur != null %}
                         {% if (project.acteur.secteurActeur.secteurActeurParent == null) %}
                             {{ project.acteur.secteurActeur.nom }}
                         {% else %}
                             {{ project.acteur.secteurActeur.secteurActeurParent.nom }}
+                        {% endif %}
                         {% endif %}
                     </td>
 
@@ -164,9 +164,10 @@
 
                     {% spaceless %}
                         <td>
+
                             <ul>
                                 {% for focus in project.focus %}
-                                    <li>{{ focus.nom}}&nbsp;</li>
+                                    <li>{{ focus.nom}}</li>
                                 {% endfor %}
                             </ul>
                         </td>
@@ -198,7 +199,6 @@
 
 
 
-
 {% endblock %}
 
 {% block javascripts %}
@@ -214,7 +214,7 @@
                 "paging":   true,
 
                 "lengthChange": false,
-
+                //"lengthMenu": [ 5, 10, 20 ],
                 "lengthMenu": [ 5, 10, 20 ],
 
                 "ordering": true,
