--- a/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
@@ -45,7 +45,7 @@
 
         <div class="col-md-8">
             <div class="hierarchie_result_niv_1">
-
+                ici
             </div>
         </div>
 
