--- a/src/GCF/FrontBundle/Resources/views/Default/Projects/projects.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Projects/projects.html.twig
@@ -7,6 +7,9 @@
             display: none;
         }
         #myfilter{ padding: 10px 0; border: solid 1px;  margin: 10px 0;}
+        .paginate_button.next,.paginate_button.previous{
+            display: none;
+        }
     </style>
 {% endblock %}
 {% block body %}
