--- a/src/GCF/FrontBundle/Resources/views/base.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/base.html.twig
@@ -210,6 +210,8 @@
             .custom_breadcrumb{
                 position: absolute;
                 bottom: 0;
+                left: 0;
+                right: 0;
                 width: 100%;
             }
         </style>
