--- a/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
@@ -9,33 +9,11 @@
                 {% for key, sector in sectors %}
                     {% if sector.secteurActeurParent == null  %}
                         <div class="panel panel-default">
-
                             <div class="panel-heading" >
                                 <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ key }}" style="text-decoration: none;">{{ sector.nom }}</a>
+                                    <a href="{{ path('gcf_front_actorssectorpage', { 'id': sector.id}) }}" style="text-decoration: none;">{{ sector.nom }}</a>
                                 </h4>
                             </div>
-                            {%  if key == 0 %}
-                                {% set classActive = 'in' %}
-                            {% else %}
-                                {% set classActive = ' ' %}
-                            {% endif %}
-                            <div id="collapse{{ key }}" class="panel-collapse collapse {{ classActive }}">
-
-                                <ul class="list-group">
-                                    {% for key, sectorFils in sectorsFils %}
-
-                                        {% if sectorFils.secteurActeurParent == sector.nom %}
-
-                                            <li class="list-group-item" onclick="getFils('{{ sectorFils.nom }}')" style="cursor: pointer;"><a style="text-decoration: none;">{{ sectorFils.nom }}</a></li>
-
-                                        {% endif %}
-
-                                    {% endfor %}
-                                </ul>
-
-                            </div>
-
                         </div>
                     {% endif %}
                 {% endfor %}
@@ -45,7 +23,8 @@
 
         <div class="col-md-8">
             <div class="hierarchie_result_niv_1">
-                ici
+            {% block actorsSector %}
+            {% endblock %}
             </div>
         </div>
 
