--- a/src/GCF/FrontBundle/Resources/views/base.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/base.html.twig
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="{{ asset('assets/font-awesome-4.7.0/css/font-awesome.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('assets/slick/slick.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('assets/slick/slick-theme.css') }}">
-
     {% block styleBloc %}{% endblock %}
     {% block scriptBloc %}{% endblock %}
 </head>
@@ -194,7 +193,6 @@
     {% else %}
         <style>
             .under_header_navigation{
-
                 background-image: url("http://127.0.0.1:8000/assets/images/BACKGROUND.jpg");
                 position: relative;
                 width: 100%;
@@ -212,6 +210,8 @@
             .custom_breadcrumb{
                 position: absolute;
                 bottom: 0;
+                left: 0;
+                right: 0;
                 width: 100%;
             }
         </style>
