--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -39,7 +39,6 @@
 
 /*
 =================================================
-
 =================================================
 */
 
@@ -227,6 +226,7 @@ header and top bar
 Block footer copyright
 ======================
 */
+.footer-basic{margin-top: 50px}
 .footer-basic footer {
     background: #22AA86;
     padding-top: 10px;
