--- a/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Elearning/e-learning.html.twig
@@ -95,11 +95,11 @@
                         </div>
                         <p>Date de publication : 2018</p>
                         <div class="details">
-                            <p><strong>Location :</strong> Lorem ipsum</p>
+                            <p><strong>Adresse :</strong> Lorem ipsum</p>
                             <p><strong>Type :</strong> Lorem ipsum dolor </p>
                             <p><strong>Focus :</strong>Lorem</p>
-                            <p><strong>Thematic Sector :</strong>ipsum</p>
-                            <p><strong>Key Words :</strong>Lorem ipsum, Lorem ipsum dolor sit amet, Lorem dolor, ipsum, Lorem, amet</p>
+                            <p><strong>Secteur :</strong>ipsum</p>
+                            <p><strong>Mots clés :</strong>Lorem ipsum, Lorem ipsum dolor sit amet, Lorem dolor, ipsum, Lorem, amet</p>
                         </div>
                     </div>
                 </div>
@@ -122,11 +122,11 @@
                         </div>
                         <p>Date de publication : 2018</p>
                         <div class="details">
-                            <p><strong>Location :</strong> Lorem ipsum</p>
+                            <p><strong>Adresse :</strong> Lorem ipsum</p>
                             <p><strong>Type :</strong> Lorem ipsum dolor </p>
                             <p><strong>Focus :</strong>Lorem</p>
-                            <p><strong>Thematic Sector :</strong>ipsum</p>
-                            <p><strong>Key Words :</strong>Lorem ipsum, Lorem ipsum dolor sit amet, Lorem dolor, ipsum, Lorem, amet</p>
+                            <p><strong>Secteur :</strong>ipsum</p>
+                            <p><strong>Mots clés :</strong>Lorem ipsum, Lorem ipsum dolor sit amet, Lorem dolor, ipsum, Lorem, amet</p>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
 
     <script>
         jQuery('#open_modal_read_video').click(function () {
-           jQuery('#model_video').css('display', 'block');
+            jQuery('#model_video').css('display', 'block');
         });
         jQuery('#close_panel').click(function () {
             jQuery('#model_video').css('display', 'none');
