--- a/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
@@ -59,7 +59,7 @@
         </div>
 
         <div class="col-md-8">
-            <div class="hierarchie_result_niv_1">
+            <div class="hierarchie_result_lvl">
             {% block actorsSector %}
             {% endblock %}
             </div>
