--- a/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
+++ b/src/GCF/FrontBundle/Resources/views/Default/Actors/actors.html.twig
@@ -34,25 +34,40 @@
             border-radius: 3px;
             background-color: lightgrey;
         }
+
+        #accordion .panel-default .panel-title{cursor: pointer}
     </style>
 {% endblock %}
 
 {% block body %}
+
 
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-4" style="padding-left:0">
                 <div class="panel-group" id="accordion">
                     {% for key, sector in sectors %}
-                        {% if sector.secteurActeurParent == null  %}
+
                             <div class="panel panel-default">
-                                <div class="panel-heading" >
+                                <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapse{{ key }}" >
                                     <h4 class="panel-title">
+
                                         <a href="{{ path('gcf_front_actorssectorpage', { 'id': sector.id}) }}" style="text-decoration: none;">{{ sector.nom }}</a>
+                                         <i class="fa fa-caret-down" aria-hidden="true" style="float:right"></i>
                                     </h4>
                                 </div>
+
+                                <div id="collapse{{ key }}" class="panel-collapse collapse">
+                                    <ul class="list-group">
+                                        {% for actor in actors %}
+                                            {% if ( actor.secteurActeur ==  sector.nom ) %}
+                                            <li class="list-group-item">{{ actor.nom }}</li>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </ul>
+                                </div>
                             </div>
-                        {% endif %}
+
                     {% endfor %}
 
                 </div>
@@ -69,154 +84,9 @@
         </div>
     </div>
 
-
-    {% block organismePub %}{% endblock %}
-    {% block organismePrive %}{% endblock %}
-    {% block societeCivile %}{% endblock %}
-    {% block parlement %}{% endblock %}
-
 {% endblock %}
 
 
 {% block javascripts %}
 
-    <script>
-        function getFils( value ){
-            url = 'http://localhost/symfony/greenclimate/web/app_dev.php/fr/actors/get-actors/'+value;
-            alert  ('oK');
-            jQuery.ajax({
-                url: url,
-                type: 'POST',
-                dataType: 'json',
-                success:function(result , status) {
-
-                    console.log(result, status);
-                    toappend = '<ul>';
-                    //console.log(result.length);
-                    resultlength = result.length;
-
-                    if (resultlength > 0) {
-
-                        for (i = 0; i < resultlength; i++) {
-
-                            projectName = result[i].nom;
-                            projectParent = result[i].parent;
-                            projectFils = result[i].fils;
-
-                            if (projectParent === 'null') {
-
-                                toappend += '<li>' + projectName + '</li>';
-                                toappend += '<ul>';
-
-                                for ( let fils of projectFils ){
-                                    for (j = 0; j < resultlength; j++){
-
-                                        if (result[j].nom === fils){
-                                            toappend += '<li>'+ fils +'</li>' ;
-                                            toappend += '<ul>';
-                                            fils1 = result[j].fils;
-                                            for ( let fils1 of result[j].fils ){
-                                                for (k = 0; k < resultlength; k++){
-
-                                                    if (result[k].nom === fils){
-
-                                                        toappend += '<li>'+result[k].fils;
-                                                        toappend += '</li>';
-
-                                                        toappend += '<ul>';
-                                                        fils2 = result[k].fils;
-                                                        for ( let fils2 of result[k].fils ){
-                                                            for (q = 0; q < resultlength; q++){
-
-                                                                if (result[q].nom === fils1){
-
-                                                                    for ( let fils3 of (result[q].fils)){
-                                                                        toappend += '<li>'+fils3;
-                                                                        toappend += '</li>';
-                                                                    }
-                                                                }
-                                                            }
-                                                        }
-                                                        toappend += '</ul>';
-
-                                                    }
-                                                }
-                                            }
-
-                                            toappend += '</ul>';
-
-                                        }
-                                    }
-                                }
-
-                                toappend += '</ul>';
-                            }
-                            break;
-                        }
-
-                        // for (i = 0; i < resultlength; i++) {
-                        //
-                        //     projectName = result[i].nom;
-                        //     projectParent = result[i].parent;
-                        //     projectFils = result[i].fils;
-                        //
-                        //     if ( projectParent !== 'null' ) {
-                        //
-                        //         toappend += '<ul>';
-                        //            // toappend += '<li>' + projectName + '</li>';
-                        //            // toappend += '<ul>';
-                        //
-                        //             for( k=0; k < projectFils.length; k++  ){
-                        //
-                        //                 toappend += '<li>' + projectFils[k] + '</li>';
-                        //                 toappend += '<ul>';
-                        //                 for (s = 0; s < resultlength; s++) {
-                        //                     if (result[s] === projectFils[k] ){
-                        //
-                        //                     }
-                        //                 }
-                        //                 // toappend += '</ul>';
-                        //             }
-                        //
-                        //            toappend += '</ul>';
-                        //         toappend += '</ul>';
-
-
-
-                        // toappend += '<ul>';
-                        //
-                        // for (j = 0; j < resultlength; j++) {
-                        //
-                        //     //console.log(i - 1);
-                        //     a = i - 1;
-                        //     if (a < 0) {
-                        //         a = 0;
-                        //     }
-                        //
-                        //     if (jQuery.inArray(projectName, result[a].fils)) {
-                        //
-                        //         toappend += '<li>' + projectName + '</li>';
-                        //
-                        //     }
-                        // }
-                        // toappend += '</ul>';
-                        //}
-                        //}
-                    }
-
-
-
-                    toappend += '</ul>';
-                    $('.hierarchie_result_niv_1').append(toappend);
-                },
-                error:function(error){
-                    console.log(error);
-                    jQuery('.result-search').append(error.responseText);
-                }
-            });
-        }
-
-
-
-    </script>
 {% endblock %}
